--- a/.github/workflows/python-build-windows.yml
+++ b/.github/workflows/python-build-windows.yml
@@ -2,8 +2,9 @@ name: Package Application with Pyinstaller
 
 on:
   push:
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      branches: [ main ]
+  pull_request:
+      branches: [ main ]
 
 jobs:
   build-windows:
