--- a/.github/workflows/python-build-windows.yml
+++ b/.github/workflows/python-build-windows.yml
@@ -1,5 +1,9 @@
 name: Package Application with Pyinstaller
 
+# on:
+#   push:
+#     tags:
+#       - 'v*
 on:
   push:
       branches: [ main ]
@@ -7,7 +11,7 @@ on:
       branches: [ main ]
 
 jobs:
-  build-windows:
+  build-windows-amd64:
 
     runs-on: ubuntu-20.04
 
@@ -29,7 +33,7 @@ jobs:
         name: mayuan-windows-amd64.zip
         path: dist/windows
 
-  build-Linux:
+  build-Linux-amd64:
 
     runs-on: ubuntu-20.04
 
@@ -60,3 +64,31 @@ jobs:
       with:
         name: mayuan-linux-amd64.zip
         path: dist/linux
+
+  build-MacOS-arm64:
+    runs-on: macos-11
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+          architecture: 'x64'
+
+      - name: Install Dependence
+        run: |
+          pip install --upgrade pip wheel setuptools
+          pip install -r requirements.txt
+    
+      - name: Pyinstaller
+        run: pyinstaller --clean -y --dist ./dist/macos-arm --workpath /tmp build_macos_arm.spec
+
+      - name: Copy Datasets
+        run: cp -r datasets dist/macos-arm
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: mayuan-MacOS-amd64.zip
+          path: dist/macos-arm
