--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -17,7 +17,7 @@ jobs:
       uses: JackMcKew/pyinstaller-action-windows@main
       with:
         path: ./
-        spec: build_windows.spec
+        spec: build.spec
         
     - name: Copy Datasets
       run: cp -r datasets dist/windows
@@ -49,7 +49,7 @@ jobs:
         pip install -r requirements.txt
     
     - name: Pyinstaller
-      run: pyinstaller --clean -y --dist ./dist/linux --workpath /tmp build_windows.spec
+      run: pyinstaller --clean -y --dist ./dist/linux --workpath /tmp build.spec
 
     - name: Copy Datasets
       run: cp -r datasets dist/linux
@@ -77,7 +77,7 @@ jobs:
           pip install -r requirements.txt
     
       - name: Pyinstaller
-        run: pyinstaller --clean -y --dist ./dist/macos_amd64 --workpath /tmp build_windows.spec
+        run: pyinstaller --clean -y --dist ./dist/macos_amd64 --workpath /tmp build.spec
 
       - name: Copy Datasets
         run: cp -r datasets dist/macos_amd64
